--- a/src/main/java/view/MainScreen.form
+++ b/src/main/java/view/MainScreen.form
@@ -270,7 +270,7 @@
                 </Property>
                 <Property name="selectionMode" type="int" value="0"/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Cursor Padr&#xe3;o"/>
+                  <Color id="Default Cursor"/>
                 </Property>
                 <Property name="fixedCellHeight" type="int" value="50"/>
                 <Property name="selectionBackground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
