classes and texts renamed

--- a/src/main/java/view/ProjectDialogScreen.form
+++ b/src/main/java/view/ProjectDialogScreen.form
@@ -35,7 +35,7 @@
               <Component id="jPanelRegisterProject" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
-          <Component id="jPanelToolBar" alignment="0" max="32767" attributes="0"/>
+          <Component id="jPanelToolBar" alignment="0" pref="408" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
