--- a/src/main/java/view/MainScreen.form
+++ b/src/main/java/view/MainScreen.form
@@ -59,7 +59,10 @@
             </Property>
             <Property name="rowHeight" type="int" value="50"/>
             <Property name="selectionBackground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="cc" green="ff" red="cc" type="rgb"/>
+              <Color blue="a8" green="a0" red="1d" type="rgb"/>
+            </Property>
+            <Property name="selectionForeground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ef" green="f9" red="fe" type="rgb"/>
             </Property>
             <Property name="selectionModel" type="javax.swing.ListSelectionModel" editor="org.netbeans.modules.form.editors2.JTableSelectionModelEditor">
               <JTableSelectionModel selectionMode="0"/>
@@ -145,7 +148,7 @@
     <Container class="javax.swing.JPanel" name="jPanelToolBar">
       <Properties>
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="66" green="99" red="0" type="rgb"/>
+          <Color blue="9d" green="7c" red="22" type="rgb"/>
         </Property>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.EtchedBorderInfo">
@@ -196,9 +199,9 @@
             </Property>
             <Property name="horizontalAlignment" type="int" value="2"/>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/tick.png"/>
+              <Image iconType="3" name="/tick2.png"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="  App Tarefas"/>
+            <Property name="text" type="java.lang.String" value="Todo App"/>
             <Property name="toolTipText" type="java.lang.String" value=""/>
           </Properties>
         </Component>
@@ -210,7 +213,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Anote tudo, n&#xe3;o esque&#xe7;a nada"/>
+            <Property name="text" type="java.lang.String" value="Write it down now, remeber it forever!"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabelInfos">
@@ -265,6 +268,9 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Segoe UI" size="14" style="1"/>
                 </Property>
+                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="a8" green="a0" red="1d" type="rgb"/>
+                </Property>
                 <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
                   <StringArray count="0"/>
                 </Property>
@@ -274,7 +280,10 @@
                 </Property>
                 <Property name="fixedCellHeight" type="int" value="50"/>
                 <Property name="selectionBackground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="66" green="99" red="0" type="rgb"/>
+                  <Color blue="a8" green="a0" red="1d" type="rgb"/>
+                </Property>
+                <Property name="selectionForeground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="ef" green="f9" red="fe" type="rgb"/>
                 </Property>
               </Properties>
               <Events>
@@ -325,16 +334,16 @@
               <Font name="Segoe UI" size="18" style="1"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="66" green="99" red="0" type="rgb"/>
+              <Color blue="9d" green="7c" red="22" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Tarefas"/>
+            <Property name="text" type="java.lang.String" value="Tasks"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabelTasksToolBarAdd">
           <Properties>
             <Property name="horizontalAlignment" type="int" value="0"/>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/add.png"/>
+              <Image iconType="3" name="/add2.png"/>
             </Property>
           </Properties>
           <Events>
@@ -380,16 +389,16 @@
               <Font name="Segoe UI" size="18" style="1"/>
             </Property>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="66" green="99" red="0" type="rgb"/>
+              <Color blue="9d" green="7c" red="22" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Projetos"/>
+            <Property name="text" type="java.lang.String" value="Projects"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabelProjectsToolBarAdd">
           <Properties>
             <Property name="horizontalAlignment" type="int" value="0"/>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/add.png"/>
+              <Image iconType="3" name="/add2.png"/>
             </Property>
           </Properties>
           <Events>
@@ -453,10 +462,10 @@
                   <Font name="Segoe UI" size="18" style="1"/>
                 </Property>
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="66" green="99" red="0" type="rgb"/>
+                  <Color blue="9d" green="7c" red="22" type="rgb"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="0"/>
-                <Property name="text" type="java.lang.String" value="Nenhuma Tarefa por aqui :D"/>
+                <Property name="text" type="java.lang.String" value="Yay! No tasks around here :)"/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabelEmptyTasksSubTitle">
@@ -468,14 +477,14 @@
                   <Color blue="99" green="99" red="99" type="rgb"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="0"/>
-                <Property name="text" type="java.lang.String" value="Clique no bot&#xe3;o &quot;+&quot; para adicionar uma nova tarefa"/>
+                <Property name="text" type="java.lang.String" value="Click the &quot;+&quot; button to creat a new task."/>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabelEmptyTasksImage">
               <Properties>
                 <Property name="horizontalAlignment" type="int" value="0"/>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/lists.png"/>
+                  <Image iconType="3" name="/lists2.png"/>
                 </Property>
               </Properties>
             </Component>
